:hammer: update project ishara

--- a/combos.html
+++ b/combos.html
@@ -62,11 +62,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Inicio </a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="menu.html">Menú <span class="sr-only">(current)</span> </a>
-              </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu.html">Combos</a>
+                <a class="nav-link" href="menu.html">Menú </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="combos.html">Combos <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="reparto.html">Zonas de Reparto</a>
