:hammer: update project ishara

--- a/combos.html
+++ b/combos.html
@@ -127,7 +127,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Menu
+          Nuestros Combos
         </h2>
       </div>
 
@@ -601,11 +601,11 @@
           </div>
         </div>
       </div>
-      <div class="btn-box">
+     <!--  <div class="btn-box">
         <a href="">
           View More
         </a>
-      </div>
+      </div> -->
     </div>
   </section>
 
