--- a/reparto.html
+++ b/reparto.html
@@ -129,11 +129,11 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Book A Table
+          Zonas de reparto
         </h2>
       </div>
       <div class="row">
-        <div class="col-md-6">
+       <!--  <div class="col-md-6">
           <div class="form_container">
             <form action="">
               <div>
@@ -174,10 +174,11 @@
               </div>
             </form>
           </div>
-        </div>
-        <div class="col-md-6">
+        </div> -->
+        <div class="col-md-12">
           <div class="map_container ">
-            <div id="googleMap"></div>
+            <!-- <div id="googleMap"></div> -->
+            <img src="images/reparto/zonas-reparto.png" alt="" id="googleMap">
           </div>
         </div>
       </div>
