:hammer: update project ishara

--- a/combos.html
+++ b/combos.html
@@ -133,23 +133,23 @@
 
       <ul class="filters_menu">
         <li class="active" data-filter="*">All</li>
-        <li data-filter=".burger">Burger</li>
+        <!-- <li data-filter=".burger">Burger</li>
         <li data-filter=".pizza">Pizza</li>
         <li data-filter=".pasta">Pasta</li>
-        <li data-filter=".fries">Fries</li>
+        <li data-filter=".fries">Fries</li> -->
       </ul>
 
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza">
+          <div class="col-sm-6 col-lg-4 all pizza"> 
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f1.png" alt="">
+                  <img src="images/combos/1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -157,7 +157,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $20
+                      S/20
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -195,11 +195,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f2.png" alt="">
+                  <img src="images/combos/2.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Burger
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -207,7 +207,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      S/15
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -246,11 +246,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f3.png" alt="">
+                  <img src="images/combos/3.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -258,7 +258,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $17
+                      S/17
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -297,11 +297,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f4.png" alt="">
+                  <img src="images/combos/4.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -309,7 +309,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $18
+                      S/18
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -348,11 +348,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f5.png" alt="">
+                  <img src="images/combos/5.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    French Fries
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -360,7 +360,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      S/10
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -399,11 +399,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f6.png" alt="">
+                  <img src="images/combos/6.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -411,7 +411,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      S/15
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -450,11 +450,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f7.png" alt="">
+                  <img src="images/combos/7.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -462,7 +462,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $12
+                      S/12
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -501,11 +501,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f8.png" alt="">
+                  <img src="images/combos/8.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -513,7 +513,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $14
+                      S/14
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -552,11 +552,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f9.png" alt="">
+                  <img src="images/combos/9.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Delicious Combo
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
@@ -564,7 +564,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      S/10
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
