--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/logo/logo.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
