:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -141,10 +141,6 @@
     <div class="offer_container">
       <div class="container ">
         <div>
-
-
-
-
           <br>
           <br>
           <br>
@@ -341,7 +337,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/products/3.png" alt="">
+                <img src="images/papa/3.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -382,7 +378,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/pizzas/pizza02.jpg" alt="">
+                <img src="images/combos/4.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
