--- a/index.html
+++ b/index.html
@@ -39,7 +39,25 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/1.jpg" alt="">
+      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/1.jpg" alt="">
+          </div>
+       
+          <div class="carousel-item">
+            <img src="images/2.jpg" alt="">
+          </div>
+        </div>
+        <div class="container">
+
+          <ol class="carousel-indicators">
+            <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
+            <li data-target="#customCarousel1" data-slide-to="1"></li>
+          </ol>
+        </div>
+      </div>
+
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -251,7 +269,7 @@
         <div class="row">
           <div class="col-md-6  ">
             <div class="box ">
-              <div class="img-box"> 
+              <div class="img-box">
                 <img src="images/products/1.png" alt="">
               </div>
               <div class="detail-box">
