:hammer: update project ishara

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+      <div id="customPortada" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/1.jpg" alt="">
@@ -52,8 +52,8 @@
         <div class="container">
 
           <ol class="carousel-indicators">
-            <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
-            <li data-target="#customCarousel1" data-slide-to="1"></li>
+            <li data-target="#customPortada" data-slide-to="0" class="active"></li>
+            <li data-target="#customPortada" data-slide-to="1"></li>
           </ol>
         </div>
       </div>
