--- a/combos.html
+++ b/combos.html
@@ -141,7 +141,8 @@
 
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza"> 
+
+          <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -149,15 +150,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Pizzero Clásico
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    2 pizzas familiares + 7 panes al ajo + 2 pepsi 2 1.5 lt
                   </p>
                   <div class="options">
                     <h6>
-                      S/20
+                      S/75.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -191,6 +191,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -199,15 +200,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Pizzero Supremo
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    2 pizzas familiares + 7 panes al ajo + 2 pepsi 2 1.5 lt
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/85.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -242,6 +242,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -250,15 +251,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Carnívoro
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    2 hamburgusas xl + alitas de pollo
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/17
+                      S/45.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -293,6 +295,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -301,15 +304,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Hotdogger
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    1 hot dog + papitas personales + 1 coca cola personal
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/25.50
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -344,6 +348,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -352,15 +357,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Sanguchero
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    1 hamburguesa + papitas personales + 1 coca cola personal
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/20.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -395,6 +401,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -403,15 +410,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Italianero Vegano
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    1 pizza vegana personal + 1 pasta vegana personal (opcional 1 coca cola personal)
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/17.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -446,6 +454,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -454,15 +463,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Italianero
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    1 pizza personal + 1 pasta personal (opcional 1 cola cola personal)
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/12
+                      S/17.50
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -497,6 +507,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -505,15 +516,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combro Triple Hamburguesero
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    3 mini hamburguesas + papas personales (opcional pepinillos o rocotos)
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/18.50
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -548,6 +560,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -556,15 +569,17 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Combo
+                    Combo Alitero
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    papas personales + alitas de pollo + cremas
+                    <br>
+                    
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/15.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -599,9 +614,10 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
-     <!--  <div class="btn-box">
+      <!--  <div class="btn-box">
         <a href="">
           View More
         </a>
