:hammer: update project ishara

--- a/about.html
+++ b/about.html
@@ -141,10 +141,15 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              Somos una empresa con alto conocimiento en la
+              producción y venta de comidas rápidas, damos como
+              prioridad la importancia del cliente, quien es el motivo de
+              nuestros esfuerzos, y así llegar a ustedes con la seguridad
+              de poder ofrecerles nuestros productos de excelente
+              calidad con responsabilidad y cumplimiento. Contamos
+              con excelente calidad humana que les brindara la
+              atención apropiada, para de esta manera poder llegar a
+              saber y entender sus gustos y necesidades.
             </p>
             <a href="">
               Leer más
