:hammer: update project ishara

--- a/menu.html
+++ b/menu.html
@@ -142,7 +142,7 @@
       <div class="filters-content">
         <div class="row grid">
 
-          
+
 
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
@@ -195,6 +195,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -246,6 +247,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -297,6 +299,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -348,6 +351,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -399,6 +403,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -450,6 +455,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
@@ -501,6 +507,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -552,6 +559,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -603,6 +611,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -654,6 +663,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -705,6 +715,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -756,6 +767,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -807,6 +819,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all fries">
             <div class="box">
               <div>
@@ -858,6 +871,9 @@
               </div>
             </div>
           </div>
+
+
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -866,15 +882,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Burger
+                    Hamburguesa Paltera
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con tomate, palta, rocotos, carne de res, pepinillos, lechuga, queso cheedar
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/8.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -909,6 +924,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -917,15 +933,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa Tonera
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con tocino, queso cheedar, carne de res, tomate, lechuga.
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/12
+                      S/8.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -960,6 +977,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -968,15 +986,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa Siniestra
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con tocino, queso cheedar, carne de res, pepinillos, cebolla, lechuga
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/9.50
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1011,6 +1029,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1019,15 +1038,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa BBQ
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con salsa bbq, carne de res, queso de cheedar, lechuga
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/9.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1062,6 +1081,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1070,15 +1090,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguse Royal
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburgusa con tocino, queso cheedar, carne de res, tomate, pepinillos, lechuga.
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/10.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1113,6 +1133,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1121,15 +1142,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa Picada
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamgurguesa con pollo apanado, tiras de zanahoria, tocino
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/10.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1164,6 +1185,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1172,15 +1194,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa Jirafa
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con cebolla, tomate, lechuga, queso cheedar, 2 pedazos de carne de res
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/12.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1215,6 +1238,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1223,15 +1247,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburgusa Despistosa
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con carne seca, queso cheedar, tomate, pepinillos, tomate, camarones, lechuga
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/12.50
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1266,6 +1290,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
@@ -1274,15 +1299,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hamburguesa Achorada
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    hamburguesa con pollo, palta, chorizo, huevo frito, carne de res
+                    <br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/14
+                      S/14.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1318,7 +1344,7 @@
             </div>
           </div>
 
-       
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1676,6 +1702,7 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <!--  <div class="btn-box">
