:hammer: update project ishara

--- a/menu.html
+++ b/menu.html
@@ -1353,15 +1353,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Frívola
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con tomate, jalapeño, champiñones
+                    <br><br>
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/25.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1396,6 +1397,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1404,15 +1406,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Ardiente 
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con trozos de rocoto, cavanossi, aceitunas
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/25.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1447,6 +1449,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1455,15 +1458,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Rastrera
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con tomate, aceitunas negras, japaleños, pepperoni
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/27.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1498,6 +1501,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1506,15 +1510,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Choclera
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con choclo, camaron, champiñon, aceitunas negras
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/26.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1549,6 +1553,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1557,15 +1562,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Rosera
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con hot dog, tomate, jamón, aceintunas
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/24.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1600,6 +1605,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
@@ -1608,15 +1614,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Pizza Exótica
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    pizza con tiras de pulpo, aceitunas negras, champiñones, rocoto. pepperoni
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/15
+                      S/24.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1651,6 +1657,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6 col-lg-4 all pizza">
             <div class="box">
               <div>
