--- a/menu.html
+++ b/menu.html
@@ -516,15 +516,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Bacon & Crispy Chicken Tacos
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    tres tortillas de harina, pollo crispy, lechuga, salsa de queso y tocino picado. acompañado de papas fritas
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/39.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -568,15 +567,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    potato Chips & Chesse
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    porción de papas fritas gratinado de queso mozarella
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/19.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -620,15 +619,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Potatoes Fest
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    abundantes papas fritas con diferentes creaciones de toppings ¡porque nunca son suficientes! por un lado aioli, salsa de queso con tocino crocante, y por otro, nacho meat, guacamole, pico de gallo y jalapeños
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/47.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -672,15 +670,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Potato Chips 
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    Porción de papas fritas
+                    <br><br><br><br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/11.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -724,15 +722,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Fried Pasta
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    crocantes tiras de pollo empanizadas, servidas sobre una cremosa pasta a base de tocino, cebollas ahumadas, tomate queso parmesano, queso mozarella.
+                  <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/34.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -776,15 +774,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Andean Potatoes
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    papas andinas acariciadas de finas hierbas
+                    <br><br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/11.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -828,15 +826,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Papas Fritas
+                    Onion Rings
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    montaña de aros de cebolla empanizados
+                    <br><br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/23.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -1658,57 +1656,6 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-lg-4 all pizza">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/pizzas/pizza06.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Delicious Pizza
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
-                  </p>
-                  <div class="options">
-                    <h6>
-                      S/15
-                    </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029"
-                        style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <g>
-                          <g>
-                            <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                         c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                          </g>
-                        </g>
-                        <g>
-                          <g>
-                            <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                         C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                         c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                         C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                          </g>
-                        </g>
-                        <g>
-                          <g>
-                            <path
-                              d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                         c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                          </g>
-                        </g>
-
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
 
         </div>
       </div>
