:hammer: update project ishara

--- a/menu.html
+++ b/menu.html
@@ -152,15 +152,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Lasagna
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    lasagna hecha con carne molida y ligeras capas de queso con trozos de tomate y queso parmesano
+                    <br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/35.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -204,15 +204,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Ravioles Rojos
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    ravioles con tres quesos hojas de lechuga y salsa de tomate con carne molida
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/24.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -256,15 +256,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Canutos Rojos
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    tallarines rojos, acompañado con salsa de tomate y carne de pollo
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/21.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -308,15 +308,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Canutos Verdes
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    tallarines acompañado con una salsa de espinacas
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/21.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -360,15 +360,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Lasagna Vegetariana
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    lasagna vegetariana hecha con espinacas frescas y ligeras capas de queso con trozos de tomate
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/35.00
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -412,15 +411,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Espaguetti Vegetariano
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    espaguetis con lechuga y trozos de jamón 
+                    <br><br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/18
+                      S/21.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -464,15 +463,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Fusilli al rojo
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    fusilles rojos acompaño de una crema de leche y queso parmesano 
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
-                      S/10
+                      S/21.90
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
@@ -519,7 +518,8 @@
                     Bacon & Crispy Chicken Tacos
                   </h5>
                   <p>
-                    tres tortillas de harina, pollo crispy, lechuga, salsa de queso y tocino picado. acompañado de papas fritas
+                    tres tortillas de harina, pollo crispy, lechuga, salsa de queso y tocino picado. acompañado de papas
+                    fritas
                   </p>
                   <div class="options">
                     <h6>
@@ -622,7 +622,9 @@
                     Potatoes Fest
                   </h5>
                   <p>
-                    abundantes papas fritas con diferentes creaciones de toppings ¡porque nunca son suficientes! por un lado aioli, salsa de queso con tocino crocante, y por otro, nacho meat, guacamole, pico de gallo y jalapeños
+                    abundantes papas fritas con diferentes creaciones de toppings ¡porque nunca son suficientes! por un
+                    lado aioli, salsa de queso con tocino crocante, y por otro, nacho meat, guacamole, pico de gallo y
+                    jalapeños
                   </p>
                   <div class="options">
                     <h6>
@@ -670,7 +672,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Potato Chips 
+                    Potato Chips
                   </h5>
                   <p>
                     Porción de papas fritas
@@ -725,8 +727,9 @@
                     Fried Pasta
                   </h5>
                   <p>
-                    crocantes tiras de pollo empanizadas, servidas sobre una cremosa pasta a base de tocino, cebollas ahumadas, tomate queso parmesano, queso mozarella.
-                  <br><br>
+                    crocantes tiras de pollo empanizadas, servidas sobre una cremosa pasta a base de tocino, cebollas
+                    ahumadas, tomate queso parmesano, queso mozarella.
+                    <br><br>
                   </p>
                   <div class="options">
                     <h6>
@@ -1404,7 +1407,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Pizza Ardiente 
+                    Pizza Ardiente
                   </h5>
                   <p>
                     pizza con trozos de rocoto, cavanossi, aceitunas
